fixed scrollbar issue!

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -26,5 +26,6 @@ th, td {
 
 canvas {
   position: absolute;
+  width:100%;
   height:100%;
 }
